Update Info-manga dan halaman reader

--- a/info-manga.html
+++ b/info-manga.html
@@ -178,6 +178,24 @@
         <span>Donasi untuk Beli RAW Chapter</span>
     </a>
 
+    <!-- Locked Chapter Modal -->
+    <div id="lockedChapterModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content locked-modal-content">
+            <div class="modal-header locked-modal-header">
+                <h2>🔒 Chapter Terkunci karena RAW Berbayar</h2>
+            </div>
+            <div class="modal-body locked-modal-body">
+                <p class="locked-explanation">Chapter hanya bisa dibuka setelah Anda <strong>login Trakteer</strong> dan melakukan <strong>donasi 1 permen</strong>.</p>
+                <p class="locked-benefit">✨ <strong>SEMUA</strong> chapter berbayar akan bisa dilihat di <strong>community post</strong> halaman Trakteer selama <strong>30 hari</strong> setelah melakukan donasi.</p>
+                <p class="locked-question">Apakah Anda ingin melanjutkan?</p>
+                <div class="locked-modal-buttons">
+                    <button class="locked-btn locked-btn-no" id="btnLockedNo">Tidak</button>
+                    <button class="locked-btn locked-btn-yes" id="btnLockedYes">Ya, Donasi Sekarang</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="manga-config.js"></script>
     <script src="info-manga.js"></script>
     
